--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
                 información sobre mi bibliográfia, podrás ver imagenes En esta sección encontrarás información sobre mi
                 bibliográfia, podrás ver imagenes </p>
             <a href="./components/datosBibliograficos.html"><button class="boton">Ver más</button></a>
-
         </div>
     </div>
     <br>
@@ -113,7 +112,10 @@
         </div>
     </div>
 
-
+    <!-- Nuevo  -->
+    <div class="row">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima, ut.</p>
+    </div>
 </body>
 
 </html>
