--- a/index.html
+++ b/index.html
@@ -112,9 +112,10 @@
         </div>
     </div>
 
-    <!-- Nuevo  -->
-    <div class="row">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima, ut.</p>
+    
+    <!-- NUEVO 2 -->
+    <div class="lol">
+        <p>Lorem ipsum dolor sit amet.</p>
     </div>
 </body>
 
